Conect footer-legals y legals-home

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,3 +8,11 @@
 .map{
     width: 300px;
 }
+.footerLink{
+  color: white;
+  text-decoration: none;
+}
+.footerLink:hover{
+  color: #fc6522;
+  text-decoration: none;
+}
