implemento logica en el componente detaills y agrego el estado y la action al zustand

--- a/src/views/ProductDetails/ProductDetails.module.css
+++ b/src/views/ProductDetails/ProductDetails.module.css
@@ -1,3 +1,12 @@
+.detailsLink{
+    text-decoration: none;
+    color: black;
+}
+.detailsLink:hover{
+    text-decoration: none;
+    color: #ff6824;
+}
+
 .productDetailsConteiner{
     padding: 10px;
     font-weight:bold;
