--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -18,19 +18,22 @@ margin: 0 1rem;
 }
 
 .suggestionText {
-  color: rgba(255, 255, 255, 0.733);
+  color: rgba(12, 12, 12, 0.733);
+  text-align: center;
   cursor: pointer;
   position: relative;
   z-index: 5;
+  background-color: rgba(254, 255, 255, 0.589);
 }
 
 .coincidences {
   padding:  5px;
+ 
 }
 
 .custom {
   width: 40%; 
-  height: 30px;
+  height: 40px;
   /* background-color: white; */
   /* z-index: 2; */
   display: flex; 
