--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,8 +1,8 @@
-.carousel {
+/* .carousel {
     width: 1349px;
-}
+} */
 
 .carousel img {
-    height: 400px;
+    /* height: 400px; */
     width: 100%;
 }
