--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,6 +3,7 @@
     border-bottom: 1px solid rgb(250, 250, 250);
     padding-top: 10px;
     padding-bottom: 8px;
+    font-size: 1rem;
   }
 
 .map{
@@ -15,4 +16,12 @@
 .footerLink:hover{
   color: #fc6522;
   text-decoration: none;
+}
+
+.guardianes{
+  margin: 0;
+  padding: 0.75rem 0;
+  background-color: #707070;
+  position: relative;
+  bottom: 0;
 }
