--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -13,7 +13,7 @@ i {
 }
 
 .navigation{
-  background-color: #00000029;
+  background-color: #b1b1b129;
   padding: 0;
   margin: 0;
   color: #000000;
@@ -23,6 +23,7 @@ i {
 color:rgb(0, 0, 0);
 text-decoration: none;
 font-weight: 500;
+font-size: 0.85rem;
 }
 
 .itemMenuContaianer a:hover{
