--- a/src/Views/Home/Home.module.css
+++ b/src/Views/Home/Home.module.css
@@ -7,6 +7,17 @@
     margin-bottom: 60px;
 }
 
+.carousel_container {
+    margin-left: 30px; 
+    margin-right:30px;
+    margin-top: 30px;
+  }
+ 
+  
+  
+  
+  
+  
 
 
 
