--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -8,8 +8,8 @@
 
 .cards {
     
-    height: 80%;
-    padding: 10px;
+    display: flex;
+    flex-direction: row;
     
 }
 
@@ -21,7 +21,7 @@
 
 .cardTitle {
     color:#ffffff;
-    font-size: 23px;
+    font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
