comunicación cards/detail y backend

--- a/src/components/CardProduct/CardProduct.module.css
+++ b/src/components/CardProduct/CardProduct.module.css
@@ -43,3 +43,11 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.customLink{
+    color: inherit; /*quita color azul del Link */
+    text-decoration: none; /*quita subrayado del Link */
+}
+.card:hover .customLink{
+    color: inherit; /*quita color azul del Link */
+    text-decoration: none; /*quita subrayado del Link */
+}
