--- a/src/components/Theme/Themes.module.css
+++ b/src/components/Theme/Themes.module.css
@@ -15,3 +15,24 @@
   font-weight: 700;
 }
 
+
+
+/* Estilo al hacer hover en la imagen */
+img.imgHovered  {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1);
+  filter: brightness(0.8); /* Aplica un filtro de brillo del 50% y desenfoque de 4px por defecto */
+  transition: transform 0.1s, filter 0.3s ease; /* Transiciones suaves para transform y filtro */
+}
+
+
+  
+
+
+img.imgHovered:hover {
+  object-fit: cover;
+  transform: scale(1.1); /* Escala la imagen al hacer hover */
+  filter: none; /* Elimina el filtro de brillo y desenfoque al hacer hover */
+}
