--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,26 @@
   padding: 0;
   box-sizing: border-box;
  }
+
+ .react-autosuggest__suggestions-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-radius: 15px;
+}
+
+.react-autosuggest__suggestions-container{
+position: relative;
+  overflow: hidden;
+  margin-top: -5px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.75);
+  z-index: 100;
+}
+
+.react-autosuggest__container{
+  flex: 1;
+}
