--- a/src/components/Theme/Themes.module.css
+++ b/src/components/Theme/Themes.module.css
@@ -15,8 +15,6 @@
   font-weight: 700;
 }
 
-
-
 /* Estilo al hacer hover en la imagen */
 img.imgHovered  {
   width: 100%;
@@ -27,12 +25,22 @@ img.imgHovered  {
   transition: transform 0.1s, filter 0.3s ease; /* Transiciones suaves para transform y filtro */
 }
 
-
-  
-
-
 img.imgHovered:hover {
   object-fit: cover;
   transform: scale(1.1); /* Escala la imagen al hacer hover */
   filter: none; /* Elimina el filtro de brillo y desenfoque al hacer hover */
+}
+
+/* Estilos para cuando la pantalla es menor a 576px */
+@media screen and (max-width: 575px) {
+  .containerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 800px;   
+  } 
+  .containerCards{
+    overflow-x: auto; /* Esto habilita el desplazamiento horizontal */
+    white-space: nowrap; /* Esto evita que las imágenes se rompan en varias líneas */
+  }       
 }
