--- a/src/Views/Admin/Components/DashBoard/DashBoard.module.css
+++ b/src/Views/Admin/Components/DashBoard/DashBoard.module.css
@@ -26,6 +26,16 @@
     border-radius: 4px;
     color:#383838;
   overflow: hidden;
+  transition: box-shadow 0.2s ease;
+}
+
+.cardCreateProduct:hover{
+  box-shadow: 0px 0px 5px #383838;
+}
+
+.cardCreateProduct:hover .arrowContainer i{
+    transform: translateX(13px); 
+    transition: transform 0.2s ease;
 }
 
 .itemCreateProduct{
@@ -33,7 +43,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     font-weight: 700;
     gap:10px;
     padding: 2rem 1rem;
@@ -55,7 +65,8 @@
 
 .arrowContainer i{
     color: #f9f9f9;
-    margin:  0 0 0 5px;
+    transform: translateX(-0px); 
+    transition: transform 0.2s ease;
 }
 
 .cardForUsers{
@@ -66,10 +77,16 @@
     overflow: hidden;
 }
 
+.cardForUsers:hover{
+    box-shadow: 0px 0px 5px #383838;
+  }
+
 .cardForUsers i{
     font-size: 1.8rem;
     color: #383838;
     font-weight: 700;
+    transform: translateX(-0px); 
+    transition: transform 0.2s ease;
 }
 
 
@@ -82,3 +99,17 @@
     border: 3px solid #383838;
 }
 
+
+.cardForUsers:hover .arrowContainer i{
+    transform: translateX(13px); 
+    transition: transform 0.2s ease;
+}
+
+a {
+    color: inherit !important;
+    text-decoration: none !important;
+}
+
+a:hover{
+    text-decoration: none !important;
+}
