--- a/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
+++ b/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
@@ -1,20 +1,87 @@
 
 
 .rowContainer{
-    background-color: #383838;
+    background-color: #dbdbdb;
     margin: 0.5rem 1rem !important;
     margin-bottom: 0;
     padding: 1.5rem;
     border-radius: 4px;
+    border: 1px solid #c5c5c5;
 }
 .AddProductForm{
     max-width: 350px !important;
 display: flex;
 flex-direction: column;
 margin: 0 auto;
-background-color: white;
+background-color: #ffffff;
 border-radius: 4px;
 padding: 1.5rem !important;
-gap:10px
+gap:10px;
+box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); 
+
+font-weight: 600;
+}
+
+.rowContainer label{
+    display: flex;
+    flex-direction: column;
+}
+
+.rowContainer label input{
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 2rem;
+    outline:none;
+    border-radius: 4px;
+    border: 1px solid #383838;
+    background-color: #38383813;
+    color: #383838;
+    font-size: 1rem;
+}
+
+.rowContainer label input{
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 2rem;
+    outline:none;
+    border-radius: 4px;
+    border: 1px solid #383838;
+    background-color: #38383813;
+    color: #383838;
+    font-size: 1rem;
+}
+
+.rowContainer button{
+
+    width: 100%;
+    height: 2.5rem;
+    outline:none;
+    border-radius: 4px;
+    border: 1px solid #383838;
+    background-color: #383838;
+    color: #ffffff;
+    font-size: 1rem;
+    margin-top: 1rem !important;
+}
+
+.rowContainer label select {
+    padding: 0 0.5rem;
+    width: 100%;
+    height: 2rem;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid #383838;
+    background-color: #38383813;
+    color: #383838;
+    font-size: 1rem;
+    margin-bottom: 0;
 
 }
+.error{
+    font-size: 0.80rem;
+    margin: 0;
+    padding: 0;
+    margin-left: 0.2rem;
+    color: #ff3939;
+    font-weight: 600;
+   }
