--- a/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
+++ b/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
@@ -62,6 +62,7 @@ font-weight: 600;
     color: #ffffff;
     font-size: 1rem;
     margin-top: 1rem !important;
+    font-weight: 600;
 }
 
 .rowContainer label select {
