--- a/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
+++ b/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
@@ -2,9 +2,8 @@
 
 .rowContainer{
     background-color: #dbdbdb;
-    margin: 0.5rem 1rem !important;
-    margin-bottom: 0;
-    padding: 1.5rem;
+
+    padding: 1.5rem !important;
     border-radius: 4px;
     border: 1px solid #c5c5c5;
 }
