--- a/src/Views/Admin/Components/TableEditProduct/TableEditProduct.module.css
+++ b/src/Views/Admin/Components/TableEditProduct/TableEditProduct.module.css
@@ -1,25 +1,29 @@
 /* Contenedor de la tabla con desplazamiento horizontal */
 .tableContainer {
   overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
-  max-width: 100%; /* Limita el ancho máximo al 100% del contenedor padre */
+  width: 100%; /* Limita el ancho máximo al 100% del contenedor padre */
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5); 
 }
 
-.table {
+table.table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ccc;
+  border-radius: 4px !important;
 }
 
 .table th, .table td {
-  border: 1px solid #ccc;
+  border: 1px solid #c2c2c2;
   padding: 8px;
   text-align: left;
   overflow: hidden;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px;
+ min-width: 80px;
+  max-width: 130px;
 text-align: center;
+
+background-color: white;
 }
 
 .table td img{
@@ -29,13 +33,26 @@ text-align: center;
 }
 
 .table th {
-  background-color: #f2f2f2;
+  background-color: #383838;
+  color: white;
+  font-weight: 500;
+  font-size: 0.85rem;
 }
 
 
 .table input {
-width: 100px;
+  min-width: 50px;
+max-width: 100px;
 margin: 0;
+
+padding: 0 0.5rem;
+
+
+outline:none;
+border: 1px solid #c2c2c2;
+background-color: #38383813;
+color: #383838;
+font-size: 1rem;
 }
 
 
@@ -49,17 +66,19 @@ button.editButton {
   color: white;
   border: none;
   font-weight: 600;
+  border: 2px solid #383838;
 }
 
 button.editButton:hover {
  
-  background-color: #ff6824;
+  background-color: #fdf747;
+  color: #383838;
 
 }
 
 button.editButton:active{
  
-  background-color: #b65d34;
+  background-color: #c4bf3f;
 
 }
 
@@ -70,3 +89,57 @@ button.editButton:active{
 button.editButton:hover  i{
   color: #383838;
 }
+
+
+.saveButton, .cancelButton{
+  height:100%;
+  border-radius: 4px;
+  margin-left: 2px;
+  padding: 2px 8px;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  background-color: #383838;
+}
+
+
+.saveButton{
+  color: #58ff3b;
+  background-color: #383838;
+  border: 2px solid #383838;
+}
+
+.saveButton:hover{
+ color: #383838;
+  background-color: #58ff3b;
+  }
+
+  .cancelButton{
+    color: #ff4848;
+  background-color: #383838;
+  border: 2px solid #383838;
+  }
+
+  .cancelButton:hover{
+  background-color: #ff4848;
+  }
+
+  .cancelButton i{
+    color: #ff4848;
+    font-size: 1.2rem;
+  }
+
+  .cancelButton:hover i{
+    color: #383838;
+    font-size: 1.2rem;
+  }
+
+
+  .saveButton i{
+    color: #58ff3b;
+    font-size: 1.2rem;
+  }
+
+  .saveButton:hover i{
+    color: #383838;
+  }
