--- a/src/Views/Admin/Components/SearchBarAdmin/SearchBarAdmin.module.css
+++ b/src/Views/Admin/Components/SearchBarAdmin/SearchBarAdmin.module.css
@@ -6,7 +6,7 @@
     outline:none;
     border-radius: 4px;
     border: 2px solid #ffffff;
-    background-color: #f5f5f5;
+    background-color: #ffffff !important;
     color: #383838;
     font-size: 1rem;
     box-shadow: 0 0 3px #ccc; 
