Manage Product 1.0 done

--- a/src/Views/Admin/Views/Products/Views/ProductManage/ProductManage.module.css
+++ b/src/Views/Admin/Views/Products/Views/ProductManage/ProductManage.module.css
@@ -12,8 +12,15 @@
     gap:1rem;
 }
 
+.messageSection{
+  display: flex;
+  width: 100%;
+  justify-content:flex-start;
+  height: 2.5rem;
+}
+
 .resetButton{
-    height:2.5rem;
+    min-height:2.5rem;
     border-radius: 4px;
     margin-left: 2px;
     padding: 5px 16px;
