boton y productos en oferta/carrito

--- a/src/components/FormPurchaseOrder/FormPurchase.module.css
+++ b/src/components/FormPurchaseOrder/FormPurchase.module.css
@@ -1,9 +1,10 @@
 .buttonConfirm {
     width: 20%;
+    height: 40px;
     background-Color: #FC6522;
     border: none;
     color: white;
     border-radius: 30px;
     font-weight: 500;
-    margin-left: 840px;
+    margin-left: 843px;
 }
