--- a/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
+++ b/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
@@ -38,10 +38,9 @@ font-weight: 600;
     font-size: 1rem;
 }
 
-.rowContainer label input{
-    padding: 0 0.5rem;
+.rowContainer label textarea{
+    padding: 0.25rem 0.5rem;
     width: 100%;
-    height: 2rem;
     outline:none;
     border-radius: 4px;
     border: 1px solid #383838;
@@ -49,6 +48,14 @@ font-weight: 600;
     color: #383838;
     font-size: 1rem;
 }
+
+.rowContainer label textarea:focus, .rowContainer label input:focus{
+    outline:none;
+    border: 1px solid #ff6824;
+    box-shadow: 0px 0px 6px #ff6824;
+    border-radius: 4px;
+}
+
 
 .rowContainer button{
 
