--- a/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
+++ b/src/Views/Admin/Components/FormAddProduct/FormAddProduct.module.css
@@ -71,6 +71,30 @@ font-weight: 600;
     font-weight: 600;
 }
 
+
+
+.rowContainer label input:focus{
+    outline:none;
+    border: 1px solid #ff6824;
+    box-shadow: 0px 0px 6px #ff6824;
+    border-radius: 4px;
+}
+
+.rowContainer button:hover{
+    border: 1px solid #ff6824;
+    background-color: #ff6824;
+    color: #ffffff;
+}
+
+
+.rowContainer button:active{
+    border: 1px solid #bb633a;
+    background-color: #bb633a;
+    color: #ffffff;
+}
+
+
+
 .rowContainer label select {
     padding: 0 0.5rem;
     width: 100%;
